# duscan

./: .gitignore  Cargo.toml  README.md
installer/: add-to-user-path.ps1  duscan.nsi  duscan.wxs  license.rtf  remove-from-user-path.ps1
scripts/: package-installer.ps1  package-msi.ps1
src/: build.rs  cli.rs  formatador.rs  main.rs  scanner.rs
